feat: implement Telegram auth with JWT and user management
- Add Telegram initData signature verification using init-data-golang library
- Implement JWT token generation and validation
- Create auth handler for POST /api/auth endpoint
- Create user handler for GET /api/user/me endpoint
- Add JWT middleware for protected routes
- Integrate yagalog for structured logging
- Add HTML page for Mini App with initData testing
- Update docker-compose.yml to load environment variables from .env
- Add JWT secret configuration
- User auto-creation/update on authentication

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,10 @@ services:
       - MINIO_SECRET_ACCESS_KEY=minioadmin
       - MINIO_USE_SSL=false
       - MINIO_BUCKET_NAME=mayoku
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - JWT_SECRET=${JWT_SECRET:-change-me-in-production}
+    env_file:
+      - .env
     depends_on:
       - postgres
       - redis
