refactor: reorganize project structure into backend/ and frontend/
- Move all Go code to backend/ directory
- Create Next.js 15 frontend with TypeScript
- Setup modern design with glassmorphism effects
- Integrate Telegram Mini App SDK
- Update docker-compose.yml for new structure
- Add pages: Profile, Lobby
- Configure Zustand, TanStack Query, Tailwind CSS

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,10 @@ FROM golang:1.25.3-alpine AS builder
 
 WORKDIR /app
 
-COPY Mayoku/go.mod Mayoku/go.sum ./
+COPY backend/go.mod backend/go.sum ./
 RUN go mod download
 
-COPY Mayoku/ ./
+COPY backend/ ./
 RUN CGO_ENABLED=0 GOOS=linux go build -o /app/mayoku ./cmd/api
 
 FROM alpine:latest
