feat: add frontend service to docker-compose
- Add frontend Dockerfile with multi-stage build (Next.js + Nginx)
- Add nginx.conf for SPA routing and static file serving
- Add frontend service to docker-compose.yml
- Configure NEXT_PUBLIC_API_URL via build args (http://backend:8080 in Docker)
- Update documentation with frontend service info
- Frontend now runs as separate container on port 3000

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ MINIO_BUCKET_NAME=mayoku
 
 # Telegram
 TELEGRAM_BOT_TOKEN=
+
+JWT_SECRET=change-me-in-production-use-strong-secret
+
+NEXT_PUBLIC_API_URL=http://localhost:8080
