refactor: use nginx as reverse proxy for frontend and backend
- Create nginx service that serves frontend static files and proxies API
- Frontend and API now accessible through single port 80
- Nginx proxies /api/* requests to backend:8080
- Nginx proxies WebSocket connections /api/game/ws to backend:8080
- Update frontend API client to use relative paths in production
- Update WebSocket hook to detect production vs development
- Remove separate frontend container, use nginx with built frontend
- Benefits: no CORS issues, single entry point, ready for SSL/TLS

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,15 +93,15 @@ services:
       timeout: 20s
       retries: 3
 
-  frontend:
+  nginx:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: nginx/Dockerfile
       args:
-        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://backend:8080}
-    container_name: mayoku-frontend
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost/api}
+    container_name: mayoku-nginx
     ports:
-      - "3000:80"
+      - "80:80"
     depends_on:
       - backend
     networks:
